@@ -849,7 +849,9 @@ gimp_gradient_segment_set_left_color_type
 gimp_gradient_segment_set_right_color
 gimp_gradient_segment_set_right_color_type
 gimp_heal_get_type
-gimp_heal_options_get_type
 gimp_paint_core_get_type
 gimp_source_core_get_type
 gimp_source_options_get_type
+gimp_perspective_clone_get_source_point
+gimp_perspective_clone_get_type
+gimp_perspective_clone_options_get_type
