@@ -1,3 +1,11 @@
+2006-09-08  Hans Breuer  <hans@breuer.org>
+
+	* **/makefile.msc app/gimpcore.def : updated
+	
+	* app/paint/gimpperspectiveclone.c : error C2057: expected constant 
+	expression. Stack allocation of dynamic sized arrays is afaik a GCC
+	extension, use g_alloca() instead.
+	
 2006-09-08  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimpperspectiveclonetool.c
